--- a/info-mapper/src/assets/app-config-default.json
+++ b/info-mapper/src/assets/app-config-default.json
@@ -6,30 +6,35 @@
         "name": "Basin Entities",
         "align": "left",
         "enabled": "true",
+        "tooltip": "All basin entity maps",
         "menus" : [
           {
             "name":  "Agriculture Ditches",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "theNameOfTheMapProjectFile"
+            "mapProject" : "theNameOfTheMapProjectFile",
+            "tooltip": "Display agricultural ditches"
           },
           {
             "name":  "Environmental Entities",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "theNameOfTheMapProjectFile"
+            "mapProject" : "theNameOfTheMapProjectFile",
+            "tooltip": "Display environmental entities"
           },
           {
             "name":  "Municipalities",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "theNameOfTheMapProjectFile"
+            "mapProject" : "theNameOfTheMapProjectFile",
+            "tooltip": "Display municipalities in Colorado"
           },
           {
             "name":  "Water Providers",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "theNameOfTheMapProjectFile"
+            "mapProject" : "theNameOfTheMapProjectFile",
+            "tooltip": "Display water providers throughout Colorado"
           }
         ]
       },
@@ -38,66 +43,77 @@
         "name": "Current Conditions",
         "align": "left",
         "enabled": "true",
+        "tooltip": "Current condition maps in Colorado",
         "menus" : [
           {
             "name":  "Boating",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "boatingMap"
+            "mapProject" : "boatingMap",
+            "tooltip": "Display boating areas"
           },
           {
             "name":  "Drought",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "theNameOfTheMapProjectFile"
+            "mapProject" : "theNameOfTheMapProjectFile",
+            "tooltip": "Display drought areas in Colorado"
           },
           {
             "name": "Evapotranspiration",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "theNameOfTheMapProjectFile"
+            "mapProject" : "theNameOfTheMapProjectFile",
+            "tooltip": "Display areas of water evaporation"
           },
           {
             "name":  "Fishing",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "fishingMap"
+            "mapProject" : "fishingMap",
+            "tooltip": "Display fishing areas"
           },
           {
             "name":  "Reservoirs (Storage)",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "theNameOfTheMapProjectFile"
+            "mapProject" : "theNameOfTheMapProjectFile",
+            "tooltip": "Display reservoir information"
           },
           {
             "name": "Snowpack (SNODAS)",
             "action":  "externalLink",
             "enabled": "true",
-            "url":  "http://snodas.cdss.state.co.us/app/index.html"
+            "url":  "http://snodas.cdss.state.co.us/app/index.html",
+            "tooltip": "Go to the SNODAS snowpack website"
           },
           {
             "name": "Soil Moisture",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "theNameOfTheMapProjectFile"
+            "mapProject" : "theNameOfTheMapProjectFile",
+            "tooltip": "Display soil moisture areas"
           },
           {
             "name": "Streamflow",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "theNameOfTheMapProjectFile"
+            "mapProject" : "theNameOfTheMapProjectFile",
+            "tooltip": "Display streamflow information"
           },
           {
             "name": "Wind",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "theNameOfTheMapProjectFile"
+            "mapProject" : "theNameOfTheMapProjectFile",
+            "tooltip": "Display wind statistics and information"
           },
           {
             "name":  "Wildfire Burn Areas",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "theNameOfTheMapProjectFile"
+            "mapProject" : "theNameOfTheMapProjectFile",
+            "tooltip": "Display all wildfire burn areas"
           }
         ]
       },
@@ -106,30 +122,35 @@
         "name": "Seasonal Outlook",
         "align": "left",
         "enabled": "true",
+        "tooltip": "Seasonal maps throughout Colorado",
         "menus" : [
           {
             "name":  "Diversions",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "theNameOfTheMapProjectFile"
+            "mapProject" : "theNameOfTheMapProjectFile",
+            "tooltip": "Display water diversions in Colorado"
           },
           {
             "name":  "Drought",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "theNameOfTheMapProjectFile"
+            "mapProject" : "theNameOfTheMapProjectFile",
+            "tooltip": "Display areas of drought in Colorado"
           },
           {
             "name":  "Reservoirs (Storage)",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "theNameOfTheMapProjectFile"
+            "mapProject" : "theNameOfTheMapProjectFile",
+            "tooltip": "Display reservoirs in Colorado"
           },
           {
             "name":  "Snow",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "theNameOfTheMapProjectFile"
+            "mapProject" : "theNameOfTheMapProjectFile",
+            "tooltip": "Display snow areas in Colorado"
           }
         ]
       },
@@ -138,42 +159,49 @@
         "name": "Historical Data",
         "align": "left",
         "enabled": "true",
+        "tooltip": "Maps displaying data from Colorado's history",
         "menus" : [
           {
             "name":  "Diversions",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "theNameOfTheMapProjectFile"
+            "mapProject" : "theNameOfTheMapProjectFile",
+            "tooltip": "Display water diversion in Colorado"
           },
           {
             "name":  "Boating",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "theNameOfTheMapProjectFile"
+            "mapProject" : "theNameOfTheMapProjectFile",
+            "tooltip": "Show boating areas"
           },
           {
             "name":  "Municipal Population",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "theNameOfTheMapProjectFile"
+            "mapProject" : "theNameOfTheMapProjectFile",
+            "tooltip": "Show populations for each municipality throughout Colorado"
           },
           {
             "name":  "Municipal Water Demand",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "theNameOfTheMapProjectFile"
+            "mapProject" : "theNameOfTheMapProjectFile",
+            "tooltip": "Display municipal water demand in Colorado"
           },
           {
             "name":  "Streamflow",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "theNameOfTheMapProjectFile"
+            "mapProject" : "theNameOfTheMapProjectFile",
+            "tooltip": "Display streamflows in Colorado"
           },
           {
             "name": "Snow",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "theNameOfTheMapProjectFile"
+            "mapProject" : "theNameOfTheMapProjectFile",
+            "tooltip": "Display show data in Colorado"
           }
         ]
       },
@@ -182,42 +210,49 @@
         "name": "Future Planning",
         "align": "left",
         "enabled": "true",
+        "tooltip": "Maps planned for future use",
         "menus" : [
           {
             "name":  "Agricultural Land Transfer",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "theNameOfTheMapProjectFile"
+            "mapProject" : "theNameOfTheMapProjectFile",
+            "tooltip": "Display agricultural land tranfer in Colorado"
           },
           {
             "name":  "Climate Change",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "theNameOfTheMapProjectFile"
+            "mapProject" : "theNameOfTheMapProjectFile",
+            "tooltip": "Display climate change statistics in Colorado"
           },
           {
             "name":  "Municipal Growth",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "theNameOfTheMapProjectFile"
+            "mapProject" : "theNameOfTheMapProjectFile",
+            "tooltip": "Show municipal growth throughout Colorado"
           },
           {
             "name":  "Open Space",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "theNameOfTheMapProjectFile"
+            "mapProject" : "theNameOfTheMapProjectFile",
+            "tooltip": "Display open space in Colorado"
           },
           {
             "name":  "Stormwater/Floodplain Plans",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "theNameOfTheMapProjectFile"
+            "mapProject" : "theNameOfTheMapProjectFile",
+            "tooltip": "Display all stormwater and floodplain plans in Colorado"
           },
           {
             "name":  "Watershed Plans",
             "action":  "displayMap",
             "enabled": "true",
-            "mapProject" : "theNameOfTheMapProjectFile"
+            "mapProject" : "theNameOfTheMapProjectFile",
+            "tooltip": "Display watershed plans in Colorado"
           }
         ]
       },
@@ -226,34 +261,39 @@
         "name": "Maps",
         "align": "left",
         "enabled": "true",
+        "tooltip": "Test maps for the Info Mapper",
         "menus": [
           {
             "name": "Line Geometry Maps",
             "action": "displayMap",
             "enabled": "true",
-            "mapProject": "line-geometry-maps"
+            "mapProject": "line-geometry-maps",
+            "tooltip": "Display all line geometry test maps"
           },
           {
             "name": "Polygon Geometry Maps",
             "action": "displayMap",
             "enabled": "true",
-            "mapProject": "polygon-geometry-maps"
+            "mapProject": "polygon-geometry-maps",
+            "tooltip": "Display all polygon geometry test maps"
           },
           {
             "name": "Point Geometry Maps",
             "action": "displayMap",
             "enabled": "true",
-            "mapProject": "point-geometry-maps"
+            "mapProject": "point-geometry-maps",
+            "tooltip": "Display all point geometry test maps"
           }
         ]
       },
       {
         "id": "Tab",
         "name": "About the Project",
-        "action": "genericPage",
+        "action": "contentPage",
         "align": "right",
         "enabled": "true",
-        "markdownFile":"about-the-project"
+        "markdownFile":"about-the-project",
+        "tooltip": "Display a content page example"
       },
       {
         "id": "Tab",
@@ -261,7 +301,8 @@
         "action": "displayMap",
         "align":"right",
         "enabled": "true",
-        "mapProject": "line_layers_2019-05-15"
+        "mapProject": "line_layers_2019-05-15",
+        "tooltip": "Display a page with a MapLink"
       }
     ]
   }
