Update assets .gitignore, issue #87

--- a/info-mapper/src/assets/.gitignore
+++ b/info-mapper/src/assets/.gitignore
@@ -1,16 +1,11 @@
 # The following files should not be committed to the repository.
-# Files may be provided by:
+
+# Standard folder for application data.
+# Application Files may be provided by:
 #
 # 1) copying files from another repository
-# 2) using symbolic links to content in another repository
+# 2) using symbolic link to content in another repository
 #
-# Additional standard/common names can be added based on experience.
-
-# Application configuration file
-app-config.json
-
-# Standard folder for map data
-/data-maps
-
-# Standard folder for time series data
-/data-ts
+# Additional standard files/folders can be added based on experience.
+#
+/app
