--- a/info-mapper/angular.json
+++ b/info-mapper/angular.json
@@ -24,12 +24,14 @@
               "src/assets",
               "src/env.js",
               {
-                "glob":"**/*",
+                "glob": "**/*",
                 "input": "node_modules/leaflet/dist/images",
                 "output": "leaflet/"
               }
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css",
               "src/assets/leaflet/css/L.Control.MousePosition.css",
               "src/assets/leaflet/css/leaflet.zoomhome.css",
@@ -103,6 +105,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": [],
