--- a/info-mapper/package.json
+++ b/info-mapper/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~7.2.0",
     "@asymmetrik/ngx-leaflet": "^5.0.2",
     "@types/leaflet": "^1.4.4",
+    "@types/papaparse": "^5.0.3",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
