--- a/info-mapper/package.json
+++ b/info-mapper/package.json
@@ -23,8 +23,11 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@asymmetrik/ngx-leaflet": "^5.0.2",
+    "@types/chart.js": "^2.9.21",
     "@types/leaflet": "^1.4.4",
+    "@types/papaparse": "^5.0.3",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.9.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
