--- a/info-mapper/package.json
+++ b/info-mapper/package.json
@@ -28,6 +28,7 @@
     "@types/papaparse": "^5.0.3",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.9.3",
+    "chartjs-plugin-zoom": "^0.7.7",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
