--- a/info-mapper/package.json
+++ b/info-mapper/package.json
@@ -38,6 +38,7 @@
     "leaflet-sidebar": "^0.2.0",
     "leaflet-sidebar-v2": "^3.2.0",
     "leaflet-svg-shape-markers": "^1.1.1",
+    "moment": "^2.26.0",
     "ngx-bootstrap": "^4.2.0",
     "papaparse": "^5.2.0",
     "popper.js": "^1.15.0",
