--- a/info-mapper/package.json
+++ b/info-mapper/package.json
@@ -12,16 +12,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/cdk": "~7.3.7",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
+    "@angular/animations": "^9.1.9",
+    "@angular/cdk": "^9.2.4",
+    "@angular/common": "^9.1.9",
+    "@angular/compiler": "^9.1.9",
+    "@angular/core": "^9.1.9",
+    "@angular/forms": "^9.1.9",
+    "@angular/material": "^9.2.4",
+    "@angular/platform-browser": "^9.1.9",
+    "@angular/platform-browser-dynamic": "^9.1.9",
+    "@angular/router": "^9.1.9",
     "@asymmetrik/ngx-leaflet": "^5.0.2",
     "@types/chart.js": "^2.9.21",
     "@types/leaflet": "^1.4.4",
@@ -43,21 +43,22 @@
     "papaparse": "^5.2.0",
     "popper.js": "^1.15.0",
     "rainbowvis.js": "^1.0.1",
-    "rxjs": "~6.3.3",
+    "rxjs": "~6.5.5",
     "showdown": "^1.9.1",
-    "zone.js": "~0.8.26"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.9",
-    "@angular-devkit/core": "^8.0.2",
-    "@angular/cli": "~7.3.3",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
+    "@angular-devkit/build-angular": "^0.901.7",
+    "@angular-devkit/core": "^9.1.9",
+    "@angular/cli": "~9.1.9",
+    "@angular/compiler-cli": "^9.1.9",
+    "@angular/language-service": "~9.1.11",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.3.29",
-    "@types/node": "^8.10.49",
-    "codelyzer": "~4.5.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
@@ -67,8 +68,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslib": "^1.11.1",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "typescript": "^3.8.3"
   }
 }
