--- a/info-mapper/package.json
+++ b/info-mapper/package.json
@@ -26,6 +26,8 @@
     "@types/chart.js": "^2.9.21",
     "@types/leaflet": "^1.4.4",
     "@types/papaparse": "^5.0.3",
+    "@types/plotly.js": "^1.50.15",
+    "@types/showdown": "^1.9.3",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.9.3",
     "chartjs-plugin-zoom": "^0.7.7",
@@ -41,6 +43,7 @@
     "moment": "^2.26.0",
     "ngx-bootstrap": "^4.2.0",
     "papaparse": "^5.2.0",
+    "plotly.js": "^1.54.6",
     "popper.js": "^1.15.0",
     "rainbowvis.js": "^1.0.1",
     "rxjs": "~6.5.5",
