--- a/info-mapper/angular.json
+++ b/info-mapper/angular.json
@@ -46,6 +46,7 @@
               "node_modules/jquery/dist/jquery.js",
               "node_modules/bootstrap/dist/js/bootstrap.js",
               "node_modules/leaflet/dist/leaflet.js",
+              "node_modules/georaster-layer-for-leaflet/georaster-layer-for-leaflet.browserify.min.js",
               "node_modules/leaflet-svg-shape-markers/dist/leaflet-svg-shape-markers.min.js",
               "node_modules/leaflet-sidebar-v2/js/leaflet-sidebar.js",
               "node_modules/rainbowvis.js/rainbowvis.js",
