--- a/info-mapper/package.json
+++ b/info-mapper/package.json
@@ -11,6 +11,11 @@
     "e2e": "ng e2e"
   },
   "private": true,
+  "browser": {
+    "fs": false,
+    "http": false,
+    "https": false
+  },
   "dependencies": {
     "@angular/animations": "^9.1.9",
     "@angular/cdk": "^9.2.4",
@@ -33,11 +38,11 @@
     "chartjs-plugin-zoom": "^0.7.7",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "georaster": "^1.1.0",
+    "georaster-layer-for-leaflet": "^0.6.0",
     "hammerjs": "^2.0.8",
-    "handlebars": "^4.7.6",
     "jquery": "^3.5.1",
     "leaflet": "^1.5.1",
-    "leaflet-sidebar": "^0.2.0",
     "leaflet-sidebar-v2": "^3.2.0",
     "leaflet-svg-shape-markers": "^1.1.1",
     "moment": "^2.26.0",
