--- a/info-mapper/package.json
+++ b/info-mapper/package.json
@@ -45,6 +45,7 @@
     "leaflet": "^1.5.1",
     "leaflet-sidebar-v2": "^3.2.0",
     "leaflet-svg-shape-markers": "^1.1.1",
+    "lodash": "^4.17.19",
     "moment": "^2.26.0",
     "ngx-bootstrap": "^4.2.0",
     "papaparse": "^5.2.0",
