--- a/info-mapper/package.json
+++ b/info-mapper/package.json
@@ -48,6 +48,7 @@
     "lodash": "^4.17.19",
     "moment": "^2.26.0",
     "ngx-bootstrap": "^4.2.0",
+    "ngx-showdown": "^5.1.0",
     "papaparse": "^5.2.0",
     "plotly.js": "^1.54.6",
     "popper.js": "^1.15.0",
