Issue #229: Smaller text used, and doc button placement changed in map name header

--- a/info-mapper/angular.json
+++ b/info-mapper/angular.json
@@ -163,5 +163,8 @@
       }
     }
   },
-  "defaultProject": "info-mapper"
+  "defaultProject": "info-mapper",
+  "cli": {
+    "analytics": false
+  }
 }
