--- a/info-mapper/angular.json
+++ b/info-mapper/angular.json
@@ -43,6 +43,7 @@
             ],
             "scripts": [
               "node_modules/leaflet/dist/leaflet.js",
+              "node_modules/esri-leaflet/dist/esri-leaflet.js",
               "node_modules/plotly.js/dist/plotly.js",
               "node_modules/jquery/dist/jquery.js",
               "node_modules/bootstrap/dist/js/bootstrap.js",
