--- a/info-mapper/package.json
+++ b/info-mapper/package.json
@@ -37,6 +37,7 @@
     "chart.js": "^2.9.3",
     "chartjs-plugin-zoom": "^0.7.7",
     "core-js": "^2.5.4",
+    "esri-leaflet": "^2.5.0",
     "font-awesome": "^4.7.0",
     "georaster": "^1.1.0",
     "georaster-layer-for-leaflet": "^0.6.0",
