Change build-util files to use infomapper, issue #81

--- a/infomapper/angular.json
+++ b/infomapper/angular.json
@@ -14,7 +14,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "aot": true,
-            "outputPath": "dist/info-mapper",
+            "outputPath": "dist/infomapper",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
