--- a/infomapper/angular.json
+++ b/infomapper/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "info-mapper": {
+    "infomapper": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -14,7 +14,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "aot": true,
-            "outputPath": "dist/info-mapper",
+            "outputPath": "dist/infomapper",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -89,18 +89,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "info-mapper:build"
+            "browserTarget": "infomapper:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "info-mapper:build:production"
+              "browserTarget": "infomapper:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "info-mapper:build"
+            "browserTarget": "infomapper:build"
           }
         },
         "test": {
@@ -135,7 +135,7 @@
         }
       }
     },
-    "info-mapper-e2e": {
+    "infomapper-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -144,11 +144,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "info-mapper:serve"
+            "devServerTarget": "infomapper:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "info-mapper:serve:production"
+              "devServerTarget": "infomapper:serve:production"
             }
           }
         },
@@ -164,7 +164,7 @@
       }
     }
   },
-  "defaultProject": "info-mapper",
+  "defaultProject": "infomapper",
   "cli": {
     "analytics": false
   }
