--- a/infomapper/angular.json
+++ b/infomapper/angular.json
@@ -34,8 +34,8 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css",
-              "src/assets/leaflet/css/L.Control.MousePosition.css",
-              "src/assets/leaflet/css/leaflet.zoomhome.css",
+              "node_modules/leaflet-mouse-position/src/L.Control.MousePosition.css",
+              "node_modules/leaflet.zoomhome/src/css/leaflet.zoomhome.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/font-awesome/css/font-awesome.css",
               "node_modules/leaflet/dist/leaflet.css",
@@ -50,8 +50,8 @@
               "node_modules/leaflet-svg-shape-markers/dist/leaflet-svg-shape-markers.min.js",
               "node_modules/leaflet-sidebar-v2/js/leaflet-sidebar.js",
               "node_modules/rainbowvis.js/rainbowvis.js",
-              "src/assets/leaflet/javascript/leaflet.zoomhome.min.js",
-              "src/assets/leaflet/javascript/L.Control.MousePosition.js"
+              "node_modules/leaflet.zoomhome/dist/leaflet.zoomhome.js",
+              "node_modules/leaflet-mouse-position/src/L.Control.MousePosition.js"
             ],
             "es5BrowserSupport": true
           },
