--- a/infomapper/package.json
+++ b/infomapper/package.json
@@ -44,8 +44,10 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "leaflet": "^1.5.1",
+    "leaflet-mouse-position": "^1.2.0",
     "leaflet-sidebar-v2": "^3.2.0",
     "leaflet-svg-shape-markers": "^1.1.1",
+    "leaflet.zoomhome": "^1.0.0",
     "lodash": "^4.17.19",
     "moment": "^2.26.0",
     "ngx-bootstrap": "^4.2.0",
