Issue #135: Finally implemented ability for a user to choose where to display an image

--- a/infomapper/src/assets/app-default/app-config.json
+++ b/infomapper/src/assets/app-default/app-config.json
@@ -312,7 +312,7 @@
         {
           "name": "Image Map",
           "action": "displayMap",
-          "id": "test-image-map",
+          "id": "point-image-maps",
           "mapProject": "data-maps/map-configuration-files/point-image-maps.json",
           "tooltip": "Display Image Map"
         }
