--- a/infomapper/angular.json
+++ b/infomapper/angular.json
@@ -25,6 +25,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/material-design-icons/iconfont/material-icons.css",
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css",
@@ -45,7 +46,8 @@
               "node_modules/leaflet-sidebar-v2/js/leaflet-sidebar.js",
               "node_modules/rainbowvis.js/rainbowvis.js",
               "node_modules/leaflet.zoomhome/dist/leaflet.zoomhome.js",
-              "node_modules/leaflet-mouse-position/src/L.Control.MousePosition.js"
+              "node_modules/leaflet-mouse-position/src/L.Control.MousePosition.js",
+              "node_modules/clusterize.js/clusterize.min.js"
             ],
             "es5BrowserSupport": true
           },
