--- a/infomapper/package.json
+++ b/infomapper/package.json
@@ -36,6 +36,7 @@
     "bootstrap": "^4.3.1",
     "chart.js": "^2.9.3",
     "chartjs-plugin-zoom": "^0.7.7",
+    "clusterize.js": "^0.18.1",
     "core-js": "^2.5.4",
     "esri-leaflet": "^2.5.0",
     "font-awesome": "^4.7.0",
@@ -49,7 +50,9 @@
     "leaflet-svg-shape-markers": "^1.1.1",
     "leaflet.zoomhome": "^1.0.0",
     "lodash": "^4.17.19",
+    "material-design-icons": "^3.0.1",
     "moment": "^2.26.0",
+    "ng-table-virtual-scroll": "^1.3.3",
     "ngx-bootstrap": "^4.2.0",
     "ngx-showdown": "^5.1.0",
     "papaparse": "^5.2.0",
