--- a/infomapper/package.json
+++ b/infomapper/package.json
@@ -17,16 +17,16 @@
     "https": false
   },
   "dependencies": {
-    "@angular/animations": "^9.1.9",
-    "@angular/cdk": "^9.2.4",
-    "@angular/common": "^9.1.9",
-    "@angular/compiler": "^9.1.9",
-    "@angular/core": "^9.1.9",
-    "@angular/forms": "^9.1.9",
-    "@angular/material": "^9.2.4",
-    "@angular/platform-browser": "^9.1.9",
-    "@angular/platform-browser-dynamic": "^9.1.9",
-    "@angular/router": "^9.1.9",
+    "@angular/animations": "^10.1.1",
+    "@angular/cdk": "^10.2.1",
+    "@angular/common": "^10.1.1",
+    "@angular/compiler": "^10.1.1",
+    "@angular/core": "^10.1.1",
+    "@angular/forms": "^10.1.1",
+    "@angular/material": "^10.2.1",
+    "@angular/platform-browser": "^10.1.1",
+    "@angular/platform-browser-dynamic": "^10.1.1",
+    "@angular/router": "^10.1.1",
     "@asymmetrik/ngx-leaflet": "^5.0.2",
     "@types/chart.js": "^2.9.21",
     "@types/leaflet": "^1.4.4",
@@ -42,7 +42,6 @@
     "font-awesome": "^4.7.0",
     "georaster": "^1.1.0",
     "georaster-layer-for-leaflet": "^0.6.0",
-    "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "leaflet": "^1.5.1",
     "leaflet-mouse-position": "^1.2.0",
@@ -54,37 +53,37 @@
     "moment": "^2.26.0",
     "ng-table-virtual-scroll": "^1.3.3",
     "ngx-bootstrap": "^4.2.0",
-    "ngx-showdown": "^5.1.0",
+    "ngx-showdown": "^6.0.0",
     "papaparse": "^5.2.0",
     "plotly.js": "^1.54.6",
     "popper.js": "^1.15.0",
     "rainbowvis.js": "^1.0.1",
     "rxjs": "~6.5.5",
     "showdown": "^1.9.1",
-    "tslib": "^1.10.0",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.7",
-    "@angular-devkit/core": "^9.1.9",
-    "@angular/cli": "~9.1.9",
-    "@angular/compiler-cli": "^9.1.9",
-    "@angular/language-service": "~9.1.11",
+    "@angular-devkit/build-angular": "^0.1001.1",
+    "@angular-devkit/core": "^10.1.1",
+    "@angular/cli": "~10.1.1",
+    "@angular/compiler-cli": "^10.1.1",
+    "@angular/language-service": "~10.1.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.3.29",
     "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.4.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "^3.8.3"
+    "tslint": "~6.1.0",
+    "typescript": "^4.0.2"
   }
 }
