--- a/infomapper/package.json
+++ b/infomapper/package.json
@@ -39,6 +39,7 @@
     "clusterize.js": "^0.18.1",
     "core-js": "^2.5.4",
     "esri-leaflet": "^2.5.0",
+    "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
     "georaster": "^1.1.0",
     "georaster-layer-for-leaflet": "^0.6.0",
@@ -69,6 +70,7 @@
     "@angular/cli": "~10.1.1",
     "@angular/compiler-cli": "^10.1.1",
     "@angular/language-service": "~10.1.1",
+    "@types/file-saver": "^2.0.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.3.29",
