Issue #300: Added a save button for data table, TS data table, and text dialogs for downloading CSV files

--- a/infomapper/tsconfig.json
+++ b/infomapper/tsconfig.json
@@ -2,6 +2,9 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
+    "paths": {
+      "@TimeInterval": ["./src/app/map-components/owf/Util/Time/TimeInterval"]
+    },
     "downlevelIteration": true,
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
