--- a/infomapper/package.json
+++ b/infomapper/package.json
@@ -38,6 +38,7 @@
     "chartjs-plugin-zoom": "^0.7.7",
     "clusterize.js": "^0.18.1",
     "core-js": "^2.5.4",
+    "d3": "^6.2.0",
     "esri-leaflet": "^2.5.0",
     "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
@@ -54,6 +55,7 @@
     "moment": "^2.26.0",
     "ng-table-virtual-scroll": "^1.3.3",
     "ngx-bootstrap": "^4.2.0",
+    "ngx-gallery-9": "^1.0.6",
     "ngx-showdown": "^6.0.0",
     "papaparse": "^5.2.0",
     "plotly.js": "^1.54.6",
