--- a/infomapper/angular.json
+++ b/infomapper/angular.json
@@ -14,6 +14,12 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "allowedCommonJsDependencies": [
+              "georaster-layer-for-leaflet",
+              "geoblaze",
+              "georaster",
+              "jquery",
+              "papaparse",
+              "select2",
               "showdown"
             ],
             "aot": true,
